First week deliverables; adding static content to the repo

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ database/sqlite3.db
 # Python environment
 python_env/
 
-# Static and template files
-static/
+# template files
+static/*.css
 templates/
 
 
